# music-server

./: .gitignore  Makefile.toml
backend/: Cargo.toml  Makefile.toml  er.a5er
backend/containers/mysql/: docker-compose.yml
backend/containers/postgresql/: docker-compose.yml
containers/mysql/: docker-compose.yml
env/: .env.dev  dev.env
