[workspace]
members = [
  "packages/streamer-api",
  "packages/library-manager-api",
  "packages/server",
  "packages/migration",
  "packages/entity",
  "packages/common",
]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["headers"] }
once_cell = "1"
regex = "1"
reqwest = { version = "0.11", features = ["rustls"], default-features = false }
sea-orm = { version = "0.10", features = [
  "sqlx-mysql",
  "runtime-tokio-rustls",
] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
