[workspace]
members = [
  "packages/server",
  "packages/common",
  "packages/db/migration",
  "packages/db/entity",
  "packages/api",
  "packages/server-core",
  "packages/server-background",
]

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["headers"] }
once_cell = "1"
regex = "1"
reqwest = { version = "0.11", features = ["rustls"], default-features = false }
sea-orm = { version = "0.10", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-channel = "1"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
thiserror = "1"
